kubernetes-networks/v2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basov-deployment
  namespace: homework
  labels:
    app: basov
spec:
  replicas: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1

  selector:
    matchLabels:
      app: basov
      
  template:
    metadata:
      labels:
        app: basov
    spec:
      containers:
      - name: nginx-fork
        image: docker.basov.software/basov:1.11.6-minimal 
        ports:
        - containerPort: 8000
        volumeMounts:
        
        - name: shared-index-html
          mountPath: /homework

        - name: basov-config
          mountPath: /etc/basov/http.d/default.conf
          subPath: default.conf

        lifecycle:
          preStop:
            exec:
              command:
                - sh
                - -c
                - "rm -f /homework/index.html && sleep 5"

        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3


      volumes:
      - name: shared-index-html
        emptyDir: {}

      - name: basov-config
        configMap:
          name: basov-config
